# cpptcl

./: .clang-format  .gitignore  .travis.yml  BSDmakefile  CHANGES  CMakeLists.txt  COMMONmakefile  CREDITS  GNUmakefile  LICENSE  Makefile  README  README.md  clang-format  cpptcl.cc  cpptcl.h  cpptcl_object.h  cpptcl_runtime.c
.github/workflows/: linux-ci.yml  mac-ci.yml
cmake/: cpptcl-config.cmake.in  version.cmake
cpptcl/: cpptcl.h  cpptcl_object.h  version.h
cpptcl/details/: bind.h  callbacks.h  callbacks_v.h  constructors.h  conversions.h  dispatchers.h  metahelpers.h  methods.h  methods_v.h
details/: callbacks.h  callbacks_v.h  constructors.h  conversions.h  dispatchers.h  methods.h  methods_v.h
doc/: README.md  arguments.md  callpolicies.html  callpolicies.md  classes.html  classes.md  compiling.html  compiling.md  errors.html  errors.md  freefun.html  freefun.md  goodies.html  goodies.md  index.html  objects.html  objects.md  quickstart.html  quickstart.md  threads.md
docker/: Dockerfile  Dockerfile.xenial-clang-5  README.md
examples/: CMakeLists.txt  Makefile  cpptcl_example_functions.cc  cpptcl_module_five.cc  cpptcl_module_six.cc  cpptcl_module_three.cc  cpptcl_module_two.cc  example1.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  example7.cc
libraries/: gd.cpp  gd.hpp
modules/: cpptcl_module_one.cc  cpptcl_module_three.cc
modules/example_functions/: CMakeLists.txt  cpptcl_example_functions.cc  cpptcl_example_functions.tcl
src/modules/: cpptcl_module_five.cc  cpptcl_module_one.cc  cpptcl_module_six.cc  cpptcl_module_three.cc  cpptcl_module_two.cc
test/: CMakeLists.txt  Makefile  test1.cc  test2.cc  test2.tcl  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc  test_main.cc
tests/: cpptcl_module_one.tcl
